# LeadFinderService

./: .env.example  README.md  pyproject.toml
docs/: spec.md
exports/: example.json
leadfinder/api/: app.py  routes.py  schemas.py
leadfinder/core/: auth.py  config.py  orchestrator.py  run_example.py  workflow.py  workflow_types.py
leadfinder/core/nodes/: anchors.py  assemble.py  dedupe.py  discover.py  export.py  planner.py  score.py  website_socials.py
leadfinder/providers/: base.py  google_places.py  osm_overpass.py  serper.py
leadfinder/storage/: db.py  models.py
leadfinder/utils/: rate_limit.py
leadfinder/workers/: tasks.py
notebooks/: .env  1_init.ipynb  2_run_example.ipynb
notebooks/exports/: aa927773-42d8-469d-8eb6-53f414fe378a.json
